--- a/static/css/style.css
+++ b/static/css/style.css
@@ -10,6 +10,9 @@
 }
 
 body {
+    font-family: Arial, sans-serif;
+    background-color: #f8f9fa;
+    color: #333;
     min-height: 100vh;
     display: flex;
     flex-direction: column;
