--- a/templates/alerts.html
+++ b/templates/alerts.html
@@ -198,6 +198,9 @@
         </div>
     </div>
 </div>
+
+<a href="{{ url_for('main.alerts') }}" class="btn btn-primary">View Alerts</a>
+
 {% endblock %}
 
 {% block scripts %}
