--- a/templates/404.html
+++ b/templates/404.html
@@ -13,7 +13,7 @@
                 <img src="{{ url_for('static', filename='images/404.svg') }}" alt="Page Not Found" class="img-fluid" style="max-height: 300px;">
             </div>
             <div>
-                <a href="{{ url_for('index') }}" class="btn btn-primary btn-lg">
+                <a href="{{ url_for('main.index') }}" class="btn btn-primary btn-lg">
                     <i class="fas fa-home me-2"></i> Go to Homepage
                 </a>
             </div>
