--- a/templates/email/reset_password.html
+++ b/templates/email/reset_password.html
@@ -56,10 +56,10 @@
             <p>We received a request to reset your password. If you did not make this request, you can ignore this email.</p>
             <p>To reset your password, click the button below:</p>
             <p style="text-align: center;">
-                <a href="{{ url_for('reset_password', token=token, _external=True) }}" class="button">Reset Password</a>
+                <a href="{{ url_for('auth.reset_password', token=token, _external=True) }}" class="button">Reset Password</a>
             </p>
             <p>Or copy and paste this link into your browser:</p>
-            <p>{{ url_for('reset_password', token=token, _external=True) }}</p>
+            <p>{{ url_for('auth.reset_password', token=token, _external=True) }}</p>
             <p>This link will expire in 1 hour.</p>
             <p>Best regards,<br>The Crypto Market Team</p>
         </div>
