--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
         
         {% if not current_user.is_authenticated %}
         <div class="mt-4">
-            <a href="{{ url_for('dashboard') }}" class="btn btn-primary me-2">View Dashboard</a>
+            <a href="{{ url_for('main.dashboard') }}" class="btn btn-primary me-2">View Dashboard</a>
         </div>
         {% endif %}
     </div>
