--- a/templates/reset_password_request.html
+++ b/templates/reset_password_request.html
@@ -32,7 +32,7 @@
                 </form>
                 
                 <div class="mt-3 text-center">
-                    <a href="{{ url_for('login') }}" class="text-decoration-none">Back to login</a>
+                    <a href="{{ url_for('auth.login') }}" class="text-decoration-none">Back to login</a>
                 </div>
             </div>
         </div>
